@@ -2,6 +2,8 @@
 #include "FWCore/ServiceRegistry/interface/ServiceMaker.h"
 #include "EventFilter/Utilities/interface/MicroStateService.h"
 #include "EventFilter/Utilities/interface/ModuleWebRegistry.h"
+#include "EventFilter/Utilities/interface/TimeProfilerService.h"
+#include "EventFilter/Utilities/plugins/ExceptionGenerator.h"
 
 using namespace edm::serviceregistry;
 using namespace evf;
@@ -11,3 +13,5 @@ typedef ParameterSetMaker<ModuleWebRegistry> maker;
 
 DEFINE_ANOTHER_FWK_SERVICE_MAKER(MicroStateService, MicroStateServiceMaker);
 DEFINE_ANOTHER_FWK_SERVICE_MAKER(ModuleWebRegistry,maker);
+DEFINE_FWK_SERVICE(TimeProfilerService);
+DEFINE_FWK_MODULE(ExceptionGenerator);
