@@ -1,3 +1,11 @@
+2007-12-20  Emilio Meschi <emilio.meschi@cern.ch>
+
+	* tag V00-13-13
+	* Added TimeProfileService to collect and make available timing 
+	info on the application web page
+	* Added ExceptionGenerator Analyzer module to generate processor-level
+	errors and exceptions
+	
 2007-11-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-13-12
